-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b07
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8002021 | 8 | Vladimir Kozlov | P4 | Resolved | Fixed | b63 |
| JDK-8017818 | 7u45 | Vladimir Kozlov | P4 | Closed | Fixed | b01 |
| JDK-8002965 | 7u40 | Vladimir Kozlov | P4 | Closed | Fixed | b01 |
| JDK-8001740 | hs24 | Vladimir Kozlov | P4 | Resolved | Fixed | master |
In java before any arithmetic operation integer values (boolean, byte, short) which are smaller than Int are converted to Int with sign extension, except char values which converted with zero extension. To get correct result of char vectors right shift operaiton we should use unsigned (logical) right shift operation.
- backported by
-
JDK-8001740 incorrect results of char vectors right shift operaiton
-
- Resolved
-
-
JDK-8002021 incorrect results of char vectors right shift operaiton
-
- Resolved
-
-
JDK-8002965 incorrect results of char vectors right shift operaiton
-
- Closed
-
-
JDK-8002966 incorrect results of char vectors right shift operaiton
-
- Closed
-
-
JDK-8002967 incorrect results of char vectors right shift operaiton
-
- Closed
-
-
JDK-8017818 incorrect results of char vectors right shift operaiton
-
- Closed
-
(1 backported by)