8001183: incorrect results of char vectors right shift operaiton

Do vector right shift operation for small int types only after loads

Reviewed-by: jrose, dlong